--- a/config-sample.json
+++ b/config-sample.json
@@ -1,27 +1,14 @@
 {
-  "bridge": {
-    "name": "Raspberry Pi", # optional
-    "username": "00:00:00:00:00:00", # optional; maybe `cat /sys/class/net/wlan0/address`
-    "pin": "123-45-678", # optional
-    "manufacturer": "Raspberry Pi Foundation", # optional; up to you
-    "model": "Zero W 1.1", # optional; up to you
-    "serialNumber": "0000000044bb145c" # optional; maybe `cat /proc/cpuinfo | grep Serial | awk ' {print $3}'`
+  "name": "Ceiling Fan",
+  "accessory": "satellite-fan",
+  "address": "00:00:00:00:00:00", 
+  "ble": {
+    "prefix": 64, 
+    "serviceUUID": "539C6813-61A0-2137-4F79-BF1A11984790", 
+    "writeCharacteristicUUID": "539C6813-61A1-2137-4F79-BF1A11984790", 
+    "notifyCharacteristicUUID": "539C6813-61A2-2137-4F79-BF1A11984790" 
   },
-  "accessories": [ {
-      "name": "Ceiling Fan",
-      "accessory": "satellite-fan",
-      "address": "00:00:00:00:00:00", # MAC address for the fan module; `sudo hcitool scan`
-      "device": { # optional
-        "manufacturer": "Harbor Bay", # optional
-        "model": "00000", # optional
-        "serial": "000000000000" # optional
-      },
-      "ble": {
-        "prefix": 64, # Prefix code used for commands sent to the device.
-        "serviceUUID": "539C6813-61A0-2137-4F79-BF1A11984790", # Bluetooth UUID of the service. Capitalization and dashes doesn't matter.
-        "writeCharacteristicUUID": "539C6813-61A1-2137-4F79-BF1A11984790", # Bluetooth UUID of the characteristic. Capitalization and dashes doesn't matter.
-        "notifyCharacteristicUUID": "539C6813-61A2-2137-4F79-BF1A11984790" # Bluetooth UUID of the characteristic. Capitalization and dashes doesn't matter.
-      },
-      "light": false,
-  } ]
+  "topicBase":"devices/harborbreezefan01/",
+  "mqttServer":"mqtt://127.0.0.1",
+  "logFile":"./my.log"
 }
